--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@types/node": "^22.8.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "final": "file:"
   }
 }
