--- a/FrontEnd/sistema-cafeteria-DesignPatterns/tsconfig.node.json
+++ b/FrontEnd/sistema-cafeteria-DesignPatterns/tsconfig.node.json
@@ -5,6 +5,7 @@
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types": ["node", "playwright"],
 
     /* Bundler mode */
     "moduleResolution": "Bundler",
