--- a/FrontEnd/sistema-cafeteria-DesignPatterns/package.json
+++ b/FrontEnd/sistema-cafeteria-DesignPatterns/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview --host"
   },
   "dependencies": {
     "@djthoms/pretty-checkbox": "^3.1.0",
